# Literature-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLEAN_STATUS.md  Dockerfile  README.md  SYSTEM_STATUS.md  VERIFICATION.md  example_usage.py  main.py  pyproject.toml
mcp_literature_storage/: 02f6f14e50ba.json  132e4a50707e.json  2702a5c9d297.json  3478eaf76916.json  37e551d1cd3a.json  4e86b146b7f1.json  582ad8c24dbf.json  6005665195c8.json  60435fbe571a.json  6cff82dee25e.json  73f3db42178b.json  77335cdb190f.json  8618975b05e1.json  892654f9a3be.json  921170d4735b.json  ae27c5cc6f62.json  e7abb2ba01a1.json  ea4976094153.json
tests/: test_system.py
tools/: __init__.py  calculator.py  literature_agent.py  literature_agent_mcp_simple.py  mcp_backend.py  toolset.py
