[project]
name = "simpletooling-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "simpletooling @ git+https://github.com/EvoEvolver/simpletooling.git",
    "langchain>=0.2.14",
    "langchain-community>=0.2.12",
    "langchain-google-genai>=2.1.10",
    "pypdf>=4.2.0",
    "faiss-cpu>=1.8.0.post1",
    "tiktoken>=0.7.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]
